updating to near final version

--- a/index.html
+++ b/index.html
@@ -614,15 +614,19 @@
 </div>
 </div>
 </section>
-<section id="what-about-data-from-the-task" class="slide level2 center">
-<h2>what about data from the task?</h2>
+<section id="preliminary-task-results" class="slide level2 center">
+<h2>preliminary task results</h2>
 </section>
-<section id="distribution-of-guesses-across-all-stimuli" class="slide level2 center bit-smaller">
-<h2>distribution of guesses across all stimuli</h2>
+<section id="preliminary-task-results-1" class="slide level2 center">
+<h2>preliminary task results</h2>
+
+<img data-src="media/figures/matrix_diagram.png" style="width:60.0%" class="r-stretch"></section>
+<section id="preliminary-task-results-2" class="slide level2 center bit-smaller">
+<h2>preliminary task results</h2>
 
 <img data-src="media/figures/all_songs_matrix.png" style="width:60.0%" class="r-stretch"></section>
-<section id="broken-down-by-musical-origin" class="slide level2">
-<h2>broken down by musical origin</h2>
+<section id="preliminary-task-results-3" class="slide level2">
+<h2>preliminary task results</h2>
 <div class="columns">
 <div class="column" style="width:50%;">
 <p><img data-src="media/figures/billboard_matrix.png" style="width:90.0%"></p>
@@ -631,8 +635,12 @@
 </div>
 </div>
 </section>
+<section id="preliminary-task-results-4" class="slide level2 center">
+<h2>preliminary task results</h2>
+
+<img data-src="media/figures/tonal_similarity_comparison.png" style="width:50.0%" class="r-stretch"></section>
 <section id="rough-test-of-response-time-relationships" class="slide level2 bit-smaller">
-<h2>rough test of response time relationships</h2>
+<h2>rough test of response-time relationships</h2>
 <div class="columns">
 <div class="column fragment" style="width:25%;">
 <p><img data-src="media/figures/rt_rough_test.png" style="width:90.0%"></p>
@@ -661,38 +669,6 @@
 </section>
 <section class="slide level2">
 
-</section>
-<section id="why-are-tonal-hierarchies-interesting" class="slide level2 bit-smaller">
-<h2>why are tonal hierarchies interesting?</h2>
-<div class="container-col center">
-<div class="element fragment">
-<p><strong>A discrepancy between</strong></p>
-</div>
-<div class="fork-lines fragment">
-
-</div>
-<div class="container-row">
-<div class="element fragment">
-<p><strong>physical representation</strong></p>
-</div>
-<div class="element fragment">
-<p><strong>mental representation</strong></p>
-</div>
-</div>
-</div>
-</section>
-<section id="why-are-tonal-hierarchies-interesting-1" class="slide level2 bit-smaller">
-<h2>why are tonal hierarchies interesting?</h2>
-<div class="columns">
-<div class="column fragment" style="width:50%;">
-<p><img data-src="media/figures/pitch_range.png" style="width:90.0%"></p>
-</div><div class="column fragment" style="width:50%;">
-<p><img data-src="media/figures/tonal_structure.png" style="width:90.0%"></p>
-</div>
-</div>
-<audio class="media_example hide" controls="">
-<source src="media/audio/pitch_sweep.wav" type="audio/wav">
-</audio>
 </section>
 <section id="what-are-tonal-hierarchies-2" class="slide level2">
 <h2>what are tonal hierarchies?</h2>
