--- a/index.html
+++ b/index.html
@@ -431,44 +431,8 @@
 <img data-src="media/figures/probe_tone.png" style="width:80.0%" class="r-stretch"></section>
 <section id="measuring-tonal-hierarchies-4" class="slide level2 center">
 <h2>measuring tonal hierarchies?</h2>
-<div class="columns">
-<div class="column" style="width:50%;">
-<p><img data-src="media/figures/probe_tone_chromatic.png" style="width:90.0%"></p>
-</div><div class="column" style="width:50%;">
-<p><img data-src="media/figures/tone_circle.png" style="width:90.0%"></p>
-</div>
-</div>
-</section>
-<section id="measuring-tonal-hierarchies-5" class="slide level2 center">
-<h2>measuring tonal hierarchies?</h2>
-<div class="columns">
-<div class="column" style="width:50%;">
-<p><img data-src="media/figures/probe_tone_diatonic.png" style="width:90.0%"></p>
-</div><div class="column" style="width:50%;">
-<p><img data-src="media/figures/tone_circle_c_major.png" style="width:90.0%"></p>
-</div>
-</div>
-</section>
-<section id="measuring-tonal-hierarchies-6" class="slide level2 center">
-<h2>measuring tonal hierarchies?</h2>
-<div class="columns">
-<div class="column" style="width:50%;">
-<p><img data-src="media/figures/probe_tone_triadic.png" style="width:90.0%"></p>
-</div><div class="column" style="width:50%;">
-<p><img data-src="media/figures/tone_circle_c_major_triad.png" style="width:90.0%"></p>
-</div>
-</div>
-</section>
-<section id="measuring-tonal-hierarchies-7" class="slide level2 center">
-<h2>measuring tonal hierarchies?</h2>
-<div class="columns">
-<div class="column" style="width:50%;">
-<p><img data-src="media/figures/probe_tone_tonic.png" style="width:90.0%"></p>
-</div><div class="column" style="width:50%;">
-<p><img data-src="media/figures/tone_circle_c_tonic.png" style="width:90.0%"></p>
-</div>
-</div>
-</section>
+
+<img data-src="media/figures/probe_tone_ordered.png" style="width:80.0%" class="r-stretch"></section>
 <section id="limitations" class="slide level2">
 <h2>limitations</h2>
 <div class="container-col center">
@@ -580,20 +544,10 @@
 <section id="some-very-preliminary-results" class="slide level2 center">
 <h2>some very preliminary results…</h2>
 </section>
-<section id="our-sample-so-far" class="slide level2 incremental">
+<section id="our-sample-so-far" class="slide level2 center">
 <h2>our sample so far…</h2>
-<div class="columns">
-<div class="column fragment" style="width:50%;">
-<ul>
-<li class="fragment">~2,000 participants so far</li>
-<li class="fragment">59% male, 34% female, 8% other</li>
-<li class="fragment">47% have had ‘some’ music lessons</li>
-</ul>
-</div><div class="column fragment" style="width:50%;">
-<p><img data-src="media/figures/ages.png" style="width:90.0%"></p>
-</div>
-</div>
-</section>
+
+<img data-src="media/figures/ages.png" style="width:50.0%" class="r-stretch"></section>
 <section id="our-sample-so-far-1" class="slide level2">
 <h2>our sample so far…</h2>
 <div class="columns">
@@ -630,7 +584,7 @@
 <div class="columns">
 <div class="column" style="width:50%;">
 <p><img data-src="media/figures/billboard_matrix.png" style="width:90.0%"></p>
-</div><div class="column" style="width:50%;">
+</div><div class="column fragment" style="width:50%;">
 <p><img data-src="media/figures/NHS_matrix.png" style="width:90.0%"></p>
 </div>
 </div>
@@ -639,18 +593,18 @@
 <h2>preliminary task results</h2>
 
 <img data-src="media/figures/tonal_similarity_comparison.png" style="width:50.0%" class="r-stretch"></section>
-<section id="rough-test-of-response-time-relationships" class="slide level2 bit-smaller">
+<section id="rough-test-of-response-time-relationships" class="slide level2 bit-smaller center">
 <h2>rough test of response-time relationships</h2>
-<div class="columns">
-<div class="column fragment" style="width:25%;">
-<p><img data-src="media/figures/rt_rough_test.png" style="width:90.0%"></p>
-</div><div class="column fragment" style="width:37.5%;">
-<p><img data-src="media/figures/rt_rough_test_musicLessons.png" style="width:90.0%"></p>
-</div><div class="column fragment" style="width:37.5%;">
-<p><img data-src="media/figures/rt_rough_test_corpus.png" style="width:90.0%"></p>
-</div>
-</div>
-</section>
+
+<img data-src="media/figures/rt_rough_test.png" class="r-stretch"></section>
+<section id="rough-test-of-response-time-relationships-1" class="slide level2 bit-smaller center">
+<h2>rough test of response-time relationships</h2>
+
+<img data-src="media/figures/rt_rough_test_musicLessons.png" style="width:40.0%" class="r-stretch"></section>
+<section id="rough-test-of-response-time-relationships-2" class="slide level2 bit-smaller center">
+<h2>rough test of response-time relationships</h2>
+
+<img data-src="media/figures/rt_rough_test_corpus.png" style="width:40.0%" class="r-stretch"></section>
 <section id="funders" class="slide level2 center">
 <h2>funders</h2>
 <div class="container-col column" style="width:90%;">
@@ -677,6 +631,46 @@
 <video class="media_example" controls="">
 <source src="media/videos/scale_example.mp4" type="video/mp4">
 </video>
+</div>
+</section>
+<section id="measuring-tonal-hierarchies-5" class="slide level2 center">
+<h2>measuring tonal hierarchies?</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><img data-src="media/figures/probe_tone_chromatic.png" style="width:90.0%"></p>
+</div><div class="column" style="width:50%;">
+<p><img data-src="media/figures/tone_circle.png" style="width:90.0%"></p>
+</div>
+</div>
+</section>
+<section id="measuring-tonal-hierarchies-6" class="slide level2 center">
+<h2>measuring tonal hierarchies?</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><img data-src="media/figures/probe_tone_diatonic.png" style="width:90.0%"></p>
+</div><div class="column" style="width:50%;">
+<p><img data-src="media/figures/tone_circle_c_major.png" style="width:90.0%"></p>
+</div>
+</div>
+</section>
+<section id="measuring-tonal-hierarchies-7" class="slide level2 center">
+<h2>measuring tonal hierarchies?</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><img data-src="media/figures/probe_tone_triadic.png" style="width:90.0%"></p>
+</div><div class="column" style="width:50%;">
+<p><img data-src="media/figures/tone_circle_c_major_triad.png" style="width:90.0%"></p>
+</div>
+</div>
+</section>
+<section id="measuring-tonal-hierarchies-8" class="slide level2 center">
+<h2>measuring tonal hierarchies?</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><img data-src="media/figures/probe_tone_tonic.png" style="width:90.0%"></p>
+</div><div class="column" style="width:50%;">
+<p><img data-src="media/figures/tone_circle_c_tonic.png" style="width:90.0%"></p>
+</div>
 </div>
 </section>
 <section id="thanks-for-your-attention" class="slide level2 center">
